Call base class RemovedFrom for MediaControlsImpl.

isConnected() bit was not correctly cleared because of this.

Bug: 878696
Change-Id: I09d69c94eb5f9c9f4694a6ff1a473a112c895c8d
Reviewed-on: https://chromium-review.googlesource.com/1194225
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587341}
Former-commit-id: 2ccd5c888fed170f998921f5db937d962cae9b82